--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-slate-50 scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/profile.png" />
+    <link rel="shortcut icon" href="/profile.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebDev Portfolio | TheBlaiseCode</title>
   </head>
